tests/models/struct/unnamed/bool/fail/lt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(lt = 2)]
    bool
);
fn main() {}
